修改热更新脚本, 以及增加厨师刷声望脚本

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,5 +1,6 @@
 <vertical padding="16" id="main">
   <button w="auto" id="autoMask" text="制作声望垃圾(工匠)" />
+  <button w="auto" id="autoColl" text="采集重点物资(工匠)" />
   <button w="auto" id="autoMaskLianjin" text="炼金紫药" />
   <button w="auto" id="autoMaskChushi" text="制作声望垃圾(厨师)" />
   <button w="auto" id="autoUseSkill" text="自动触发手艺技能" />
